--Beta 1.0.1--	21/09/2020
Fixes:
-Removed duplicate files

--Beta 1.0--	21/09/2020
New features:
-Coloured printing of changes over each step an option given
---green for alive
---red for dead
-Wrapping of edges is now optional
-Extinct method added in, unused

Fixes:
-Fix of change variable typo in declaration

Changes:
-step simulate method moved from game of life to cellautomata class

--Alpha 1.1--	21/09/2020
New features:
-previous state stored in cell for history tracking

Changes:
-step simulate method moved from game of life to cellautomata class