@@ -3,7 +3,9 @@ Microsoft Visual Studio Solution File, Format Version 12.00
 # Visual Studio 15
 VisualStudioVersion = 15.0.28307.1082
 MinimumVisualStudioVersion = 10.0.40219.1
-Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GameOfLife", "GameOfLife\GameOfLife.csproj", "{9B87D844-6ADD-4F4D-8579-331A70781718}"
+Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "GameOfLifeConsole", "GameOfLife\GameOfLifeConsole.csproj", "{9B87D844-6ADD-4F4D-8579-331A70781718}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GameOfLifeCore", "GameOfLifeCore\GameOfLifeCore.csproj", "{345D1EC4-307B-4891-B08B-E8352094CA7B}"
 EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
@@ -15,6 +17,10 @@ Global
 		{9B87D844-6ADD-4F4D-8579-331A70781718}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{9B87D844-6ADD-4F4D-8579-331A70781718}.Release|Any CPU.ActiveCfg = Release|Any CPU
 		{9B87D844-6ADD-4F4D-8579-331A70781718}.Release|Any CPU.Build.0 = Release|Any CPU
+		{345D1EC4-307B-4891-B08B-E8352094CA7B}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{345D1EC4-307B-4891-B08B-E8352094CA7B}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{345D1EC4-307B-4891-B08B-E8352094CA7B}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{345D1EC4-307B-4891-B08B-E8352094CA7B}.Release|Any CPU.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
