@@ -1,4 +1,7 @@
 --Beta 1.0.1--	21/09/2020
+Changes:
+- .net standard conversion of project to dll file
+
 Fixes:
 -Removed duplicate files
 
